--- a/tests/iperf/iperf.yml
+++ b/tests/iperf/iperf.yml
@@ -19,7 +19,7 @@ run:
     steps:
         - lava-test-case ping-google-dns --shell ping -c 3 8.8.8.8
         - lava-test-case ping-lunarius --shell ping -c 3 lunarius.fe80.eu
-        - lava-test-case iperf --shell iperf -c lunarius.fe80.eu
+        - ./iperf.sh
 
 parse:
     pattern: "(?P<test_case_id>.*-*):\\s+(?P<result>(pass|fail))"
