--- a/tests/iperf/iperf.yml
+++ b/tests/iperf/iperf.yml
@@ -19,6 +19,7 @@ run:
     steps:
         - lava-test-case ping-google-dns --shell ping -c 3 8.8.8.8
         - lava-test-case ping-lunarius --shell ping -c 3 lunarius.fe80.eu
+        - lava-test-case kernel-version --result pass --measurement "$(cat /proc/version  | awk '{ print $3 } ')" --units kernelversion
         - ./tests/iperf/iperf.sh
 
 parse:
