--- a/tests/basic/basic.yml
+++ b/tests/basic/basic.yml
@@ -14,6 +14,8 @@ install:
 
 run:
     steps:
+        - lava-test-case kernel-version --shell cat /proc/version
+        - lava-test-case openwrt-version --shell cat /etc/openwrt_version
         - ./tests/basic/basic.sh
 
 parse:
