--- a/job-templates/ar71xx_tl-wr1043-v1.yml
+++ b/job-templates/ar71xx_tl-wr1043-v1.yml
@@ -35,7 +35,7 @@ actions:
         login_prompt: 'kmodloader: done loading kernel modules from /etc/modules.d/'
         username: 'root'
         login_commands:
-          - "while ! ip route show |grep 192.168.201 ; do echo waiting for 192.168.201 route ; sleep 1 ; done"
+          - "while ! ip route show |grep default; do echo waiting for default route; sleep 1; done"
           - "echo link"
           - "uci set firewall.@zone[1].input='ACCEPT'"
           - "uci commit"
