job-templates/ar71xx_tl-wr1043-v3: execute iperf test

--- a/job-templates/ar71xx_tl-wr1043-v3.yml
+++ b/job-templates/ar71xx_tl-wr1043-v3.yml
@@ -63,3 +63,7 @@ actions:
           from: git
           path: tests/basic/basic.yml
           name: basic
+        - repository: https://code.fe80.eu/openwrt-lava/lava-tests.git
+          from: git
+          path: tests/iperf/iperf.yml
+          name: iperf
