update job-templates to match new lava version
newer lava version does not set the prompt in adavance resulting in a different prompt

--- a/job-templates/ar71xx_tl-wr1043-v1.yml
+++ b/job-templates/ar71xx_tl-wr1043-v1.yml
@@ -47,12 +47,14 @@ actions:
       os: lede
       prompts:
         - 'lava-test: #'
+        - 'root@OpenWrt:'
 
   - boot:
       method: ssh
       connection: ssh
       prompts:
         - 'lava-test: #'
+        - 'root@OpenWrt:'
 
   - test:
       timeout:
