--- a/job-templates/ar71xx_tl-wr841-v9.yml
+++ b/job-templates/ar71xx_tl-wr841-v9.yml
@@ -47,12 +47,14 @@ actions:
       os: lede
       prompts:
         - 'lava-test: #'
+        - 'root@OpenWrt:'
 
   - boot:
       method: ssh
       connection: ssh
       prompts:
         - 'lava-test: #'
+        - 'root@OpenWrt:'
 
   - test:
       timeout:
