--- a/job-templates/ar71xx_tl-wr841-v9.yml
+++ b/job-templates/ar71xx_tl-wr841-v9.yml
@@ -10,6 +10,10 @@ timeouts:
     minutes: 5
 
 visibility: public
+metadata:
+  openwrt-ci: true
+  openwrt-commit: COMMIT
+
 
 actions:
   - deploy:
